<resources>
    <string name="app_name">Storefrontv2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Create new account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_user">Create User</string>
    <string name="viewItemActivity">View item activity</string>
    <string name="newItemActivity">New item activity</string>
    <string name="upload_item">Upload item</string>
    <string name="upload_imgs">Upload images</string>
    <string name="submit">Submit</string>
    <string name="goback">Go back</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_id">User Id</string>

    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="street">Street address</string>
    <string name="street_num">Street and number</string>
    <string name="city">City</string>
    <string name="zcode">Zip code</string>
    <string name="email">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="img">Images</string>
    <string name="description">Description</string>
    <string name="buy">Kjøp</string>

</resources>