<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/createAccWindow">


    <TextView
        android:id="@+id/createAccTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:textAlignment="center"
        android:gravity="bottom"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:id="@+id/firstNameLayout"
        android:layout_below="@+id/createAccTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/firstNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:layout_weight=".60"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_below="@+id/createAccTxt"/>

        <EditText
            android:id="@+id/firstNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createAccTxt"
            android:layout_weight=".40"
            android:hint="@string/firstname"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastNameLayout"
        android:layout_below="@+id/firstNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lastNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:layout_weight=".60"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/lastNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createAccTxt"
            android:layout_weight=".40"
            android:hint="@string/lastname"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/streetNameLayout"
        android:layout_below="@+id/lastNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/streetNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:layout_weight=".60"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/streetNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:hint="@string/street_num"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cityNameLayout"
        android:layout_below="@+id/streetNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cityNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_weight=".60"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/cityNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:hint="@string/city"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/postNameLayout"
        android:layout_below="@+id/cityNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/postNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zcode"
            android:layout_weight=".60"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/postNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:hint="@string/zcode"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailNameLayout"
        android:layout_below="@+id/postNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/emailNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_weight=".60"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/emailNameEdit"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:hint="@string/email"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userNameLayout"
        android:layout_below="@+id/emailNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/usernameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_weight=".60"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:hint="@string/username"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passNameLayout"
        android:layout_below="@+id/userNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/passTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_weight=".60"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/passEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/createAccBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:textSize="15sp"
        android:textColor="#FFF"
        android:background="#fb2525"
        android:layout_below="@+id/passNameLayout"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:gravity="center"/>





</RelativeLayout>